--- a/src/app/components/form/form.module.css
+++ b/src/app/components/form/form.module.css
@@ -1,7 +1,28 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-    max-width: 16rem;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  max-width: 16rem;
+}
+
+.fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  max-width: 16rem;
+}
+
+.legend {
+  border-bottom: 1px solid var(--color-gray-200);
+  padding-bottom: 0.75rem;
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  letter-spacing: -0.0025em;
+  color: var(--color-gray-900);
+}
