--- a/src/app/components/button/button.module.css
+++ b/src/app/components/button/button.module.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 2.5rem;
+    height: 3.4rem;
     padding: 0 1.5rem;
     margin: 0;
     outline: 0;
@@ -17,7 +17,7 @@
     transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 
     &:focus-visible {
-        outline: 2px solid var(--primary-color);
+        outline: 2px solid rgb(var(--primary-color));
         outline-offset: 2px;
     }
 
@@ -27,9 +27,9 @@
 }
 
 .primary {
-    background-color: var(--primary-color);
-    color: var(--primary-color-foreground);
-    border: 1px solid var(--primary-color);
+    background-color: rgb(var(--primary-color));
+    color: rgb(var(--primary-color-foreground));
+    border: 1px solid rgb(var(--primary-color));
 
     &:hover {
         opacity: 0.9;
@@ -41,30 +41,30 @@
 
     &:disabled {
         cursor: not-allowed;
-        background-color: var(--border-color);
-        color: var(--secondary-color);
-        border-color: var(--border-color);
+        background-color: rgb(var(--border-color));
+        color: rgb(var(--secondary-color));
+        border-color: rgb(var(--border-color));
         opacity: 1;
     }
 }
 
 .secondary {
     background-color: transparent;
-    color: var(--secondary-color-foreground);
-    border: 1px solid var(--primary-color);
+    color: rgb(var(--secondary-color-foreground));
+    border: 1px solid rgb(var(--primary-color));
 
     &:hover {
-        background-color: rgba(var(--foreground-rgb), 0.05);
+        background-color: rgb(var(--bg-color)), 0.05;
     }
 
     &:active {
-        background-color: rgba(var(--foreground-rgb), 0.1);
+        background-color: rgb(var(--bg-color)), 0.1;
     }
 
     &:disabled {
         cursor: not-allowed;
-        color: var(--border-color);
-        border-color: var(--border-color);
+        color: rgb(var(--border-color));
+        border-color: rgb(var(--border-color));
         background-color: transparent;
     }
 }
