--- a/src/app/components/checkbox-group/checkbox-group.module.css
+++ b/src/app/components/checkbox-group/checkbox-group.module.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 0.25rem;
-  color: var(--primary-color);
+  gap: 0.45rem;
+  color: rgb(var(--text-color));
 }
