--- a/src/app/components/checkbox/checkbox.module.css
+++ b/src/app/components/checkbox/checkbox.module.css
@@ -4,7 +4,7 @@
   gap: 0.5rem;
   font-size: 1rem;
   line-height: 1.5rem;
-  color: var(--primary-color);
+  color: rgb(var(--text-color));
   cursor: pointer;
   user-select: none;
   font-weight: 500;
@@ -25,23 +25,23 @@
   transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 
   &[data-unchecked] {
-    border-color: var(--border-color);
+    border-color: rgb(var(--border-color));
     background-color: transparent;
   }
 
   &[data-checked] {
-    background-color: var(--primary-color);
-    border-color: var(--primary-color);
+    background-color: rgb(var(--primary-color));
+    border-color: rgb(var(--primary-color));
   }
 
   &:focus-visible {
-    outline: 2px solid var(--primary-color);
+    outline: 2px solid rgb(var(--primary-color));
     outline-offset: 2px;
   }
 
   &:not([data-disabled]):hover {
     &[data-unchecked] {
-      border-color: var(--secondary-color);
+      border-color: rgb(var(--secondary-color));
     }
     &[data-checked] {
       opacity: 0.9;
@@ -51,7 +51,7 @@
 
 .indicator {
   display: flex;
-  color: var(--primary-color-foreground);
+  color: rgb(var(--primary-color-foreground));
 
   &[data-unchecked] {
     display: none;
