--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,34 +7,21 @@
     "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(#00000080, #00000040, #00000030, #00000020, #00000010, #00000010, #00000080);
+  --background-start-rgb: 214 219 220;
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 
-  --primary-color: #000000;
-  --primary-color-foreground: #ffffff;
-  --secondary-color: #ddd;
-  --secondary-color-foreground: #000000;
-  --border-color: #dddddd;
+  --primary-color: 0 0 0;
+  --primary-color-foreground: 255 255 255;
+  --secondary-color: 221 221 221;
+  --secondary-color-foreground: 0 0 0;
+  --border-color: 221 221 221;
   --bg-color: 255 255 255;
+  --placeholder-color: 180 180 180;
+  --text-color: 0 0 0;
 
   --h1-font-size: 2.5rem; /* 40px */
   --h2-font-size: 2rem; /* 32px */
@@ -49,31 +36,31 @@
   --line-height-tight: 1.25;
   --line-height-normal: 1.5;
   --line-height-loose: 1.75;
+
+  --hero-background-color: 217, 222, 165;
+  --hero-decorative-elements-color: 162 185 132;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --bg-color: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --bg-color: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(to bottom right, rgba(1, 65, 255, 0), rgba(1, 65, 255, 0), rgba(1, 65, 255, 0.3));
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(#ffffff80, #ffffff40, #ffffff30, #ffffff20, #ffffff10, #ffffff10, #ffffff80);
+    --text-color: 255 255 255;
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
 
-    --primary-color: #ffffff;
-    --primary-color-foreground: #000000;
-    --secondary-color: #bbbbbb;
-    --secondary-color-foreground: #000000;
-    --border-color: #444444;
+    --primary-color: 255 255 255;
+    --primary-color-foreground: 0 0 0;
+    --secondary-color: 221 221 221;
+    --secondary-color-foreground: 0 0 0;
+    --border-color: 221 221 221;
+
+    --hero-background-color: #3a4d32; /* Darker green */
+    --hero-decorative-elements-color: #7e9a5f; /* Muted green */
   }
 }
 
@@ -94,7 +81,7 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(var(--text-color));
 }
 
 .root {
@@ -112,22 +99,21 @@ a {
   }
 }
 
-/* Base Typography Styles */
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  color: var(--primary-color);
+  color: rgb(var(--text-color));
   font-family: var(--font-family-sans);
   line-height: var(--line-height-tight);
-  margin-bottom: 0.5em; /* Adjust as needed */
+  margin-bottom: 0.5em;
 }
 
 h1 {
   font-size: var(--h1-font-size);
-  font-weight: 700;
+  font-weight: 900;
 }
 h2 {
   font-size: var(--h2-font-size);
@@ -151,7 +137,7 @@ h6 {
 }
 
 p {
-  color: var(--secondary-color);
+  color: rgb(var(--text-color));
   font-family: var(--font-family-sans);
   font-size: var(--p-font-size);
   line-height: var(--line-height-normal);
@@ -159,25 +145,16 @@ p {
 }
 
 a {
-  color: var(--primary-color); /* Or a specific link color variable */
+  color: rgb(var(--text-color));
   font-family: var(--font-family-sans);
   font-size: var(--a-font-size);
-  text-decoration: underline; /* Common practice for accessibility */
+  text-decoration: underline;
 }
 
 a:hover {
-  text-decoration: none; /* Or a different style on hover */
+  text-decoration: none;
 }
 
-span {
-  /* Default span has no specific styling beyond inheriting from its parent.
-     You can add specific styles if you have a common use case for spans. */
-  font-size: var(--span-font-size);
-  /* color: inherit; by default */
-  /* font-family: inherit; by default */
-}
-
-/* Utility class for borders (example) */
 .bordered {
-  border: 1px solid var(--border-color);
+  border: 1px solid rgb(var(--border-color));
 }
