--- a/src/app/form/page.module.css
+++ b/src/app/form/page.module.css
@@ -61,7 +61,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    gap: 1rem;
+    gap: 3rem;
     width: 100%;
     max-width: 700px;
     margin-left: 20%;
@@ -69,7 +69,7 @@
 
     h1 {
       font-size: 3rem;
-      font-weight: 700;
+      font-weight: 800;
       line-height: 1.2;
       margin: 0;
     }
@@ -129,11 +129,11 @@
     margin-left: 0;
     width: 100%;
     padding: 0 1rem;
-  }
 
-  .heroContent h1 {
-    font-size: 2rem;
-    text-align: center;
+    h1 {
+      font-size: 2rem;
+      text-align: center;
+    }
   }
 
   .formContainer {
