--- a/src/components/checkbox-group/checkbox-group.module.css
+++ b/src/components/checkbox-group/checkbox-group.module.css
@@ -5,3 +5,9 @@
   gap: 0.45rem;
   color: rgb(var(--text-color));
 }
+
+.error {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: rgb(var(--secondary-color));
+}
