--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -31,6 +31,10 @@
     opacity: 0.7;
   }
 
+  &[data-invalid] {
+    border-color: rgb(var(--destructive-color));
+  }
+
   &:focus {
     outline: none;
     border-color: rgb(var(--primary-color));
@@ -41,5 +45,5 @@
 .error {
   font-size: 0.875rem;
   line-height: 1.25rem;
-  color: rgb(var(--secondary-color));
+  color: rgb(var(--destructive-color));
 }
