--- a/src/components/select/select.module.css
+++ b/src/components/select/select.module.css
@@ -202,3 +202,9 @@
     }
   }
   
+
+  .error {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    color: rgb(var(--destructive-color));
+  }
