--- a/src/components/textarea/textarea.module.css
+++ b/src/components/textarea/textarea.module.css
@@ -43,5 +43,5 @@
 .error {
   font-size: 0.875rem;
   line-height: 1.25rem;
-  color: rgb(var(--secondary-color));
-} 
+  color: rgb(var(--destructive-color));
+}
