--- a/src/components/checkbox-group/checkbox-group.module.css
+++ b/src/components/checkbox-group/checkbox-group.module.css
@@ -9,5 +9,5 @@
 .error {
   font-size: 0.875rem;
   line-height: 1.25rem;
-  color: rgb(var(--secondary-color));
+  color: rgb(var(--destructive-color));
 }
