--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -12,6 +12,31 @@
   color: rgb(var(--text-color));
 }
 
+.inputWrapper {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.leading,
+.trailing {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(var(--secondary-color));
+  pointer-events: none;
+}
+
+.leading {
+  left: 0.875rem;
+}
+
+.trailing {
+  right: 0.875rem;
+}
+
 .input {
   box-sizing: border-box;
   padding: 0.5rem 0.875rem;
@@ -25,6 +50,14 @@
   background-color: rgb(var(--bg-color));
   color: rgb(var(--text-color));
   transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+
+  &.hasLeading {
+    padding-left: 2.5rem;
+  }
+
+  &.hasTrailing {
+    padding-right: 2.5rem;
+  }
 
   &::placeholder {
     color: rgb(var(--placeholder-color));
