Refactor input and select and checkbox to be RHF-compat.

--- a/src/components/alert-dialog/alert.module.css
+++ b/src/components/alert-dialog/alert.module.css
@@ -100,7 +100,7 @@
   
   .Actions {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     gap: 1rem;
     margin-top: 2.5rem;
   }
