--- a/src/components/alert-dialog/alert.module.css
+++ b/src/components/alert-dialog/alert.module.css
@@ -1,4 +1,3 @@
-
 .Button {
     box-sizing: border-box;
     display: flex;
@@ -96,6 +95,10 @@
     font-size: 0.875rem;
     line-height: 1.5rem;
     color: rgb(var(--text-color));
+  }
+  
+  .Content {
+    margin-bottom: 1.5rem;
   }
   
   .Actions {
