--- a/src/components/table/table.module.css
+++ b/src/components/table/table.module.css
@@ -176,7 +176,6 @@
   height: 2rem;
   padding: 0 0.5rem;
   border: 1px solid rgb(var(--border-color));
-  border-radius: 0.5rem;
   background: none;
   color: rgb(var(--text-color));
   cursor: pointer;
@@ -200,4 +199,29 @@
   background-color: rgb(var(--primary-color));
   border-color: rgb(var(--primary-color));
   color: rgb(var(--primary-color-foreground));
+}
+
+.statusBadge {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.25rem 0.75rem;
+  border-radius: 9999px;
+  font-size: 0.75rem;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.statusPending {
+  background-color: rgb(254 249 195);
+  color: rgb(161 98 7);
+}
+
+.statusReachedOut {
+  background-color: rgb(219 234 254);
+  color: rgb(29 78 216);
+}
+
+.statusClosed {
+  background-color: rgb(220 252 231);
+  color: rgb(21 128 61);
 } 
